--- a/PAGINA WEB/proyecto.html
+++ b/PAGINA WEB/proyecto.html
@@ -33,7 +33,7 @@
             <p class="resaltar">Es importante lo que el cliente quiere comer, no lo que el chef quiere cocinar.</p>
         </div>
         <div class="imagen-derecha">
-            <img src="./imagenes/lomo.jpg" alt="Imagen 2">
+            <img src="../imagenes/lomo.jpg" alt="Imagen 2">
             <p>¿Donde cree que esta el mejor lomo del Perú?</p>
         </div>
     </main>
