--- a/PAGINA WEB/proyecto.html
+++ b/PAGINA WEB/proyecto.html
@@ -23,7 +23,7 @@
 
     <main class="contenedor-principal">
         <div class="imagen-izquierda">
-            <img src="./imagenes/ceviche.png" alt="Imagen 1">
+            <img src="../imagenes/ceviche.png" alt="Imagen 1">
             <p>Un buen ceviche lleva ganas, alegría y los mejores productos frescos.</p>
         </div>
         <div class="contenido-principal">
@@ -33,7 +33,7 @@
             <p class="resaltar">Es importante lo que el cliente quiere comer, no lo que el chef quiere cocinar.</p>
         </div>
         <div class="imagen-derecha">
-            <img src="./imagenes/lomo.jpg" alt="Imagen 2">
+            <img src="../imagenes/lomo.jpg" alt="Imagen 2">
             <p>¿Donde cree que esta el mejor lomo del Perú?</p>
         </div>
     </main>
